-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.10.2
-
None
-
78012fcb66471e55b0255cc2c6e0ace956f1031e (qt-creator/qt-creator/4.11)
After switching the session, the first document opens in the last editor of the last external window, if there are any. That's quite unexpected behaviour, expecially when most other editors are empty.
If there are no external windows or I manually select editor by click, it opens where expected (in the first or selected editor respectively)
For Gerrit Dashboard: QTCREATORBUG-23233 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
281791,2 | Core: Fix wrong current view after session restore | 4.11 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |