Core: Fix wrong current view after session restore

Fixes: QTCREATORBUG-23233
Change-Id: I4e5a854769d6aa00f5601b8bd8282523681d0458
Reviewed-by: Eike Ziller <eike.ziller@qt.io>